fix bug admin controller