@@ -1,5 +1,6 @@
 package com.example.blog.service.Impl;
 
+import com.example.blog.dto.UserDto;
 import com.example.blog.model.User;
 import com.example.blog.repository.UserRepository;
 import com.example.blog.service.UserService;
@@ -7,8 +8,9 @@ import jakarta.persistence.EntityNotFoundException;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.RequestParam;
+import java.util.stream.Collectors;
+
+
 
 import java.util.List;
 import java.util.UUID;
@@ -20,35 +22,37 @@ public class UserServiceImpl implements UserService {
     private ModelMapper modelMapper;
 
     @Override
-    public User findByUsernameAndPassword(String username, String password) {
+    public UserDto findByUsernameAndPassword(String username, String password) {
         User user = userRepository.findByUsernameAndPassword(username, password);
-        return user != null ? modelMapper.map(user, User.class) : null;
+        return user != null ? modelMapper.map(user, UserDto.class) : null;
     }
 
     @Override
-    public List<User> getAll() {
+    public List<UserDto> getAll() {
         List<User> users = userRepository.findAll();
-        return users.stream().map(user -> modelMapper.map(user, User.class)).toList();
+        return users.stream()
+                .map(user -> modelMapper.map(user, UserDto.class))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public User create(User user) {
-        var u = modelMapper.map(user, User.class);
-        var savedUser = userRepository.save(u);
-        return modelMapper.map(savedUser, User.class);
+    public UserDto create(UserDto userDto) {
+        var user = modelMapper.map(userDto, User.class);
+        var savedUser = userRepository.save(user);
+        return userDto;
     }
 
     @Override
-    public User update(UUID id, User user) {
+    public void update(UUID id, UserDto userDto) {
         var existingUser = userRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("User not found"));
-        existingUser.setFullname(user.getFullname());
-        existingUser.setPhone(user.getPhone());
-        existingUser.setRole(user.getRole());
-        existingUser.setAvatar(user.getAvatar()); // Chỉ cần cập nhật avatar như là một String
+        existingUser.setFullname(userDto.getFullname());
+        existingUser.setPhone(userDto.getPhone());
+        existingUser.setRole(userDto.getRole());
+        existingUser.setAvatar(userDto.getAvatar());
 
         var updatedUser = userRepository.save(existingUser);
-        return modelMapper.map(updatedUser, User.class);
+        modelMapper.map(updatedUser, UserDto.class);
     }
 
     @Override
@@ -56,7 +60,10 @@ public class UserServiceImpl implements UserService {
         userRepository.deleteById(id);
     }
 
-    public User findById(UUID id) {
-        return userRepository.findById(id).orElse(null);
+    @Override
+    public UserDto findById(UUID id) {
+        var user = userRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+        return modelMapper.map(user, UserDto.class);
     }
 }
